--- a/.github/workflows/nightly-tests.yml
+++ b/.github/workflows/nightly-tests.yml
@@ -28,3 +28,6 @@ jobs:
       - name: Test with pytest
         run: |
           pytest test/test_api.py
+      - name: Test with mypy
+        run: |
+          MYPYPATH=src mypy --check-untyped-defs test/test_api.py
