--- a/.github/workflows/integration_tests.yml
+++ b/.github/workflows/integration_tests.yml
@@ -1,9 +1,6 @@
-name: Python nightly unit tests
+name: Python unit tests
 
 on:
-  schedule:
-    - cron: '0 2 * * *' # run at 2 AM
-  # This can be used to allow manually triggering nightlies from the web interface
   workflow_dispatch:
 
 jobs:
@@ -24,10 +21,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install .
-          python -m pip install .[test]
+          python -m pip install .[integration_test]
       - name: Test with pytest
         run: |
-          pytest test/test_api.py
+          pytest test_integration/
       - name: Test with mypy
         run: |
-          MYPYPATH=src mypy --check-untyped-defs test/test_api.py
+          MYPYPATH=src mypy --check-untyped-defs test_integration/test_api.py
