--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -23,8 +23,10 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install .
           python -m pip install .[test]
       - name: Test with pytest
         run: |
-          pytest test/
+          pytest
+      - name: Test with mypy
+        run: |
+          MYPYPATH=src mypy --check-untyped-defs test/test_api.py
